--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,51 @@ img{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border: 2px solid rgb(29, 73, 34);
 }
+
+.headers{
+  padding:3vw;
+  display:flex;
+  margin-bottom: 10px;
+  align-items: center;
+  justify-content: center;
+  background-color: red;
+  
+  }
+  
+  .headers h3{
+  margin-top:0px;
+  padding:5vh;
+  margin-right: 5vw;
+  text-decoration:underline;
+  }
+  
+  .box{
+      /* margin-left:8vw; */
+      display:flex;
+      align-items: center;
+      justify-content:center;
+  }
+  
+  .videos{
+      background-color: rgb(211, 206, 206);
+      margin: 4vh;
+      padding: 2vh;
+      border: 1px solid black;
+      border-radius: 5px;
+  } 
+  
+  
+  .video1{
+      background-color: rgb(211, 206, 206);
+      margin-top: -10px;
+      margin-left: 4vh;
+      margin-bottom: 4vh;
+      margin-right: 4vh;
+      padding: 2vh;
+      border: 1px solid black;
+      border-radius: 5px;
+  }
+  
+  .head{
+      margin-left: 8vw;
+  }
